--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #spring.application.name=springjpa
 #spring.h2.console.enabled=true
 
+spring.profiles.active=prod
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3308/springjpa
