Aula sobre configurações internas e extenas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #spring.application.name=springjpa
 #spring.h2.console.enabled=true
 
+server.port=8082
+
+geral.user = Marcelo Domingues
 spring.profiles.active=prod
 
 spring.jpa.hibernate.ddl-auto=update
